# context-kernel

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  pyproject.toml  setup.cmd  setup.ps1  wake.cmd  wake.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/release-notes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.18.md  v0.1.19.md  v0.1.2.md  v0.1.20.md  v0.1.21.md  v0.1.22.md  v0.1.23.md  v0.1.24.md  v0.1.25.md  v0.1.26.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
.github/workflows/: ci.yml  release.yml
docs/: 00-vision.md  01-architecture.md  02-execution-plan.md  03-cli-mvp.md  04-evaluation.md  05-local-wake.md  06-skill-compiler.md  07-release-and-ci.md  08-open-source-plan.md  09-product-roadmap.md  10-benchmark-evidence.md  11-publishing-setup.md  12-first-real-file-task.md  13-release-dry-run.md
examples/benchmarks/phase2/: 01-routing.json  02-memory.json  03-budget-profiles.json
examples/benchmarks/scale/: 01-context-pressure.json  02-agent-editing.json  03-global-memory-marketplace.json
examples/evals/: phase2.json
examples/marketplace/skills/: index.json
examples/skills/: context_budget.json  edit_file.json
examples/skills/markdown/: context_budget.md
scripts/: install_remote.ps1  install_smoke.py  release_check.ps1  release_guard.py
src/context_kernel/: __init__.py  agent_reports.py  benchmarks.py  budget.py  chat_commands.py  chat_extensions.py  chat_tui.py  chat_ui.py  cli.py  cli_output.py  cli_reports.py  cli_tools.py  context.py  evals.py  global_memory.py  loop.py  loop_actions.py  loop_execution.py  loop_materialize.py  loop_planning.py  loop_progress.py  loop_recovery.py  loop_reports.py  loop_routing.py  loop_step_handlers.py  loop_steps.py  marketplace.py  mcp.py  memory.py  model_config.py  models.py  planner.py  policy.py  project.py  providers.py  report_costs.py  runner.py  skills.py  state_writer.py  storage.py  (+8 more)
src/context_kernel/marketplace_data/skills/: context_budget.json  context_compaction.json  edit_file.json  index.json  long_task_planning.json  multi_file_bugfix.json
tests/: test_runtime.py
tests/fixtures/: provider_tool_calls.json
