[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "context-kernel"
version = "0.1.0"
description = "A CLI-first context-native agent runtime prototype."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
dependencies = []
keywords = ["agent", "cli", "context", "llm", "token-budget"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["build>=1.2"]

[project.scripts]
akernel = "context_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
