[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "akernel-runtime"
version = "0.1.9"
description = "Agent Kernel: a CLI-first context-native agent runtime prototype."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
dependencies = ["prompt_toolkit>=3.0.43"]
keywords = ["agent", "cli", "context", "llm", "token-budget"]
authors = [
  { name = "Context Kernel contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/huanxin0825-ctrl/context-akernel"
Repository = "https://github.com/huanxin0825-ctrl/context-akernel"
Issues = "https://github.com/huanxin0825-ctrl/context-akernel/issues"
Changelog = "https://github.com/huanxin0825-ctrl/context-akernel/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["build>=1.2", "twine>=5.0"]

[project.scripts]
akernel = "context_kernel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
context_kernel = ["marketplace_data/skills/*.json"]
